# advent_of_code

./: .gitignore  README.md
2021/: main.py  util.py
2021/d01_sonar_sweep/: d01_sonar_sweep.py  d01_sonar_sweep_test.py
2021/d02_dive/: d01_dive.py  d01_dive_test.py
2021/d03_binary_diagnostic/: d03_binary_diagnostic.py  d03_binary_diagnostic_test.py
2021/d05_hydrothermal_venture/: d05_hydrothermal_venture.py  d05_hydrothermal_venture_test.py
2021/d15_chiton/: solution.py  (+1 more)
c++/: CMakeLists.txt  Dockerfile  build.bash
c++/src/: CMakeLists.txt  aoc.cpp  help.txt  version.hpp.in
c++/src/2015/: CMakeLists.txt  Dockerfile  day.hpp  day01.cpp  day01.hpp  day02.cpp  day02.hpp  day03.cpp  day03.hpp  day04.cpp  day04.hpp  day05.cpp  day05.hpp  day06.cpp  day06.hpp  day06.test.cpp  event.cpp  event.hpp  main.cpp
c++/src/common/: CMakeLists.txt  day.hpp  file_handler.cpp  file_handler.hpp  permutations.cpp  permutations.hpp  permutations.test.cpp  string_manipulators.cpp  string_manipulators.hpp  string_manipulators.test.cpp
c++/src/events/: CMakeLists.txt  event.cpp  event.hpp  event_collection.cpp  event_collection.hpp
c++/src/events/2015/: CMakeLists.txt  factory.cpp  factory.hpp
c++/src/events/2015/days/: CMakeLists.txt  day01.hpp  day04.cpp  day05.cpp  day05.hpp  day05.test.cpp  md5.hpp
c++/src/events/2015/days/day01/: CMakeLists.txt  day01.cpp  day01.hpp
c++/src/events/2015/days/day02/: CMakeLists.txt  day02.cpp  day02.hpp
c++/src/events/2015/days/day03/: CMakeLists.txt  day03.cpp  day03.hpp
c++/src/events/2015/days/day04/: CMakeLists.txt  day04.cpp  day04.hpp
c++/src/events/2015/days/day05/: CMakeLists.txt  day05.cpp  day05.hpp
c++/src/events/2015/days/day06/: CMakeLists.txt  day06.cpp  day06.hpp  helpers.cpp  helpers.hpp  helpers.test.cpp  lightgrid.cpp  lightgrid.hpp  lightgrid.test.cpp
c++/src/events/2015/days/day07/: CMakeLists.txt  andop.cpp  andop.hpp  day07.cpp  day07.hpp  expression.hpp  lshiftop.cpp  lshiftop.hpp  memory.cpp  memory.hpp  notop.cpp  notop.hpp  number.cpp  number.hpp  orop.cpp  orop.hpp  rshiftop.cpp  rshiftop.hpp  translator.cpp  translator.hpp  translator.test.cpp  variable.cpp  variable.hpp
c++/src/events/2015/days/day08/: CMakeLists.txt  day08.cpp  day08.hpp  matchsticker.cpp  matchsticker.hpp  matchsticker.test.cpp
c++/src/events/2015/days/day09/: CMakeLists.txt  accessories.cpp  accessories.hpp  accessories.test.cpp  day09.cpp  day09.hpp
c++/src/events/2015/days/day10/: CMakeLists.txt  day10.cpp  day10.hpp
c++/src/events/2015/days/day11/: CMakeLists.txt  day11.cpp  day11.hpp  tools.cpp  tools.hpp  tools.test.cpp
c++/src/events/2015/days/day12/: CMakeLists.txt  JsonInterceptor.hpp  JsonIterator.cpp  JsonIterator.hpp  JsonPrinter.cpp  JsonPrinter.hpp  NotRedNumberCounter.cpp  NotRedNumberCounter.hpp  NumberCounter.cpp  NumberCounter.hpp  day12.cpp  day12.hpp
(+22 files in other folders)
